# textpage_docker

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/templates/: index.html
templates/: cadastro.html
